@@ -55,16 +55,16 @@
 
         <div id="demo-single">
             <h2>Single Image</h2>
-            <p><a href="single.jpg"><img src="single_t.jpg" alt="Show image" width="100" height="75" /></a></p>
+            <p><a href="single.jpg" title="add a caption to title attribute / or leave blank"><img src="single_t.jpg" alt="Show image" width="100" height="75" /></a></p>
         </div>
 
         <div id="demo-gallery">
             <h2>Image Gallery</h2>
             <ul>
-                <li><a href="plant1.jpg" rel="gallery"><img src="plant1_t.jpg" alt="Show image" width="100" height="75" /></a></li>
-                <li><a href="plant2.jpg" rel="gallery"><img src="plant2_t.jpg" alt="Show image" width="100" height="75" /></a></li>
-                <li><a href="plant3.jpg" rel="gallery"><img src="plant3_t.jpg" alt="Show image" width="100" height="75" /></a></li>
-                <li><a href="plant4.jpg" rel="gallery"><img src="plant4_t.jpg" alt="Show image" width="100" height="75" /></a></li>
+                <li><a href="plant1.jpg" rel="gallery" title="add a caption to title attribute / or leave blank"><img src="plant1_t.jpg" alt="Show image" width="100" height="75" /></a></li>
+                <li><a href="plant2.jpg" rel="gallery" title="add a caption to title attribute / or leave blank"><img src="plant2_t.jpg" alt="Show image" width="100" height="75" /></a></li>
+                <li><a href="plant3.jpg" rel="gallery" title="add a caption to title attribute / or leave blank"><img src="plant3_t.jpg" alt="Show image" width="100" height="75" /></a></li>
+                <li><a href="plant4.jpg" rel="gallery" title="add a caption to title attribute / or leave blank"><img src="plant4_t.jpg" alt="Show image" width="100" height="75" /></a></li>
             </ul>
         </div>
 
